tests/snapshots/regression/semantic_types__modules__private_member__main.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/semantic_types/modules/private_member/main.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Array
[ 3 of 12] Compiling  List
[ 4 of 12] Compiling  Either
[ 5 of 12] Compiling  IO
[ 6 of 12] Compiling  Math
[ 7 of 12] Compiling  Numeric
[ 8 of 12] Compiling  Option
[ 9 of 12] Compiling  Primops
[10 of 12] Compiling  String
[11 of 12] Compiling  Math
• 1 error • tests/fixtures/semantic_types/modules/private_member/main.flx
error[E011]: Private Member

Cannot access private member `hidden`.

  tests/fixtures/semantic_types/modules/private_member/main.flx:4:5
  |
4 |     M.hidden(1)
  |     ^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
